# substrate-bridge-module

./: Cargo.toml  README.md
.github/workflows/: pr_hook.yml
bridge/ethereum/: package-lock.json
bridge/subgraph/: subgraph.yaml
bridge/subgraph/src/: mapping.ts
bridge/validator/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: bridge.rs  lib.rs  types.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
