[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['polkadai-bridge-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Akropolis <admin@akropolis.io>']
edition = '2018'
name = 'polkadai-bridge-runtime-wasm'
version = '1.0.0'
[dependencies.polkadai-bridge-runtime]
default-features = false
path = '..'
